--- a/index.html
+++ b/index.html
@@ -250,9 +250,8 @@ function estimateTransformation(X, Y)
   var WT = numeric.transpose(svd.V);
   var det = numeric.det(numeric.dot(V, WT));
   console.log(det);
-  var D = [[1.0, 0.0, 0.0][0.0, 1.0, 0.0][0.0, 0.0, det]];
-  var temp = numeric.dot(D, WT);
-  var R = numeric.dot(V, WT);
+  var D = [[1.0, 0.0, 0.0],[0.0, 1.0, 0.0],[0.0, 0.0, det]];
+  var R = numeric.dot(V, numeric.dot(D, WT));
 
   // Create matrix
   var localToWorld = new THREE.Matrix4();
