--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -8,6 +8,7 @@
 
 	<!-- data --!>
 	<script src="scripts/config.js"></script>
+	<script src="scripts/product-info.js"></script>
 
 	<!-- app --!>
 	<script src="scripts/chart.js"></script>
