actually reading stuff in

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -29,7 +29,7 @@
 
 		<div id="productInfo" class="content page">
 			<div id="panel">
-				<h1>My sweet product</h1>
+				<h1 id="ProductName">My sweet product</h1>
 				<span>Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
 			</div>
 			<div id="chart"> 
