--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -30,7 +30,9 @@
 		<div id="productInfo" class="content page">
 			<div id="panel">
 				<h1 id="ProductName">My sweet product</h1>
-				<span>Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
+				<span id="Teaser">Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
+				<div id="ProcessLine">
+				</div> 
 			</div>
 			<div id="chart"> 
 				<ul>
