process line stuff loads

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -34,7 +34,15 @@
 				<img id="ProductImage"/> 
 				<div id="ProcessLine">
 					<div id="Process0"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
-
+					<div id="Process1"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process2"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process3"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process4"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process5"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process6"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process7"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process8"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
+					<div id="Process9"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 				</div> 
 			</div>
 			<div id="chart"> 
