--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -45,6 +45,13 @@
 					<div id="Process9"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 				</div> 
 			</div>
+			<div id="Certifications">
+				<div id="Certification0">cert</div>
+				<div id="Certification1">cert</div>
+				<div id="Certification2">cert</div>
+				<div id="Certification3">cert</div>
+				<div id="Certification4">cert</div>
+			</div> 
 			<div id="chart"> 
 				<ul>
 					<li>Vandforbrug</li>
