--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -31,8 +31,8 @@
 			<div id="panel">
 				<h1 id="ProductName">My sweet product</h1>
 				<span id="Teaser">Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
-				<img id="ProductImage"/> 
-				<div id="ProcessLine">
+				<img id="ProductImage"style="display:none"/> 
+				<div id="ProcessLine" style="display:none">
 					<div id="Process0"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 					<div id="Process1"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 					<div id="Process2"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
