ready to fix chart

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -54,10 +54,9 @@
 			</div> 
 			<div id="chart"> 
 				<ul>
-					<li>Vandforbrug</li>
-					<li>Certificeringer</li>
-					<li>Kemikalier</li>
-					<li>Økologi</li>
+					<li class="0">Certificeringer</li>
+					<li class="1">Certificeringer</li>
+					<li class="2">Certificeringer</li>
 				</ul>
 
 				<canvas width="800" height="800"></canvas> 
