--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -1,6 +1,6 @@
 <head>
 
-	<link rel="stylesheet" type="text/css" href="css/font.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts/open-sans.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 
 	<!-- libraries --!>
