--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -1,5 +1,5 @@
 <head>
-
+	<meta charset="utf-8" /> 
 	<link rel="stylesheet" type="text/css" href="css/fonts/open-sans.css">
 	<link rel="stylesheet" type="text/css" href="css/app.css">
 
