reading product title

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -29,7 +29,8 @@
 
 		<div id="productInfo" class="content page">
 			<div id="panel">
-				<h1 id="ProductName">My sweet product</h1>
+				<h1 id="ProductTitle">My sweet product</h1>
+				<h2 id="ProductName">My sweet product</h2>
 				<span id="Teaser">Med ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</span>
 				<img id="ProductImage"style="display:none"/> 
 				<div id="ProcessLine" style="display:none">
