--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -46,6 +46,7 @@
 					<div id="Process9"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 				</div> 
 			</div>
+			<img src='css/img/polaroid.png' style='margin-top:-500px'/> 
 			<div id="Certifications">
 				<div id="Certification0">cert</div>
 				<div id="Certification1">cert</div>
