formatting on its way

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -45,15 +45,16 @@
 					<div id="Process8"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 					<div id="Process9"><span class="ProcessDescription">HEP</span><img class="ProcessImg"/></div> 
 				</div> 
+
+				<!--<img src='css/img/polaroid.png' style='margin-top:-500px'/>!-->
+				<div id="Certifications">
+					<div id="Certification0">cert</div>
+					<div id="Certification1">cert</div>
+					<div id="Certification2">cert</div>
+					<div id="Certification3">cert</div>
+					<div id="Certification4">cert</div>
+				</div> 
 			</div>
-			<img src='css/img/polaroid.png' style='margin-top:-500px'/> 
-			<div id="Certifications">
-				<div id="Certification0">cert</div>
-				<div id="Certification1">cert</div>
-				<div id="Certification2">cert</div>
-				<div id="Certification3">cert</div>
-				<div id="Certification4">cert</div>
-			</div> 
 			<div id="chart"> 
 				<ul>
 					<li class="0">Certificeringer</li>
