graph has content

--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -52,8 +52,8 @@
 						<li class="1">Certificeringer</li>
 						<li class="2">Certificeringer</li>
 					</ul>
-
-					<canvas width="800" height="800"></canvas> 
+					<canvas width="800" height="400"></canvas> 
+					<span id="ComparisonBase">Sammenlignet med konventionel produktion</span> 
 				</div>
 
 				<!--<img src='css/img/polaroid.png' style='margin-top:-500px'/>!-->
