--- a/inStoreDisplay/main.html
+++ b/inStoreDisplay/main.html
@@ -48,9 +48,9 @@
 
 				<div id="chart"> 
 					<ul>
-						<li class="0">Certificeringer</li>
-						<li class="1">Certificeringer</li>
-						<li class="2">Certificeringer</li>
+						<li class="0"></li>
+						<li class="1"></li>
+						<li class="2"></li>
 					</ul>
 					<canvas width="800" height="400"></canvas> 
 					<span id="ComparisonBase">Sammenlignet med konventionel produktion</span> 
