--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <script src="./VRControls.js"></script>
 <script src="./three.ar.js"></script>
 <script src="./numeric.js"></script>
-<script src="./product-info.js"></script>
+<script src="./assets/product-info.js"></script>
 <script>
 
 var vrDisplay, vrControls, vrFrameData, arView;
