--- a/index.html
+++ b/index.html
@@ -332,36 +332,33 @@ function createProduct(position, localToWorld, productInfo)
   // Draw product title
   var lineHeight = 60;
   var marginX = lineHeight * 2;
-  var marginY = lineHeight * 2;
+  var marginY = lineHeight * 3;
   context.font = '56px Open Sans';
   context.fillStyle = 'black';
-  wrapText(context, productInfo.ProductTitle, marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
+  marginY = wrapText(context, productInfo.ProductTitle, marginX, marginY, bitmap.width - 2 * marginX, lineHeight);
 
   // Draw teaser
-  marginY += lineHeight * 2;
   lineHeight = 40;
+  marginY += lineHeight;
   context.font = '28px Open Sans';
   context.fillStyle = 'black';
-  wrapText(context, productInfo.Teaser, marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
+  marginY = wrapText(context, productInfo.Teaser, marginX, marginY, bitmap.width - 2 * marginX, lineHeight);
 
   // Draw certifications
   marginX += lineHeight * 0.25;
-  marginY += lineHeight;
   for(var i = 0; i < productInfo.Certification.length; i++)
   {
-    marginY += lineHeight;
-    wrapText(context, " - " + productInfo.Certification[i], marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
+    marginY = wrapText(context, " - " + productInfo.Certification[i], marginX, marginY, bitmap.width - 2 * marginX, lineHeight);
   }
 
   // Draw environmental effects
-  context.font = '18px bold Open Sans';
   marginY += lineHeight;
+  context.font = '18px bold Open Sans';
   lineHeight = 20;
   for(var i = 0; i < productInfo.EnvironmentalEffects.effect.length; i++)
   {
-    marginY += lineHeight;
     var effect = productInfo.EnvironmentalEffects.effect[i];
-    wrapText(context, effect["@name"] + ": " + effect["#text"], marginX, marginY + lineHeight, bitmap.width - 2 * marginX, lineHeight);
+    marginY = wrapText(context, effect["@name"] + ": " + effect["#text"], marginX, marginY, bitmap.width - 2 * marginX, lineHeight);
   }
 
   // Create a texture
@@ -513,6 +510,7 @@ function wrapText(context, text, x, y, maxWidth, lineHeight)
       context.fillText(line, x, y);
       y += lineHeight;
   }
+  return y;
 }
 </script>
 </body>
