--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <body>
   <canvas id="canvas"></canvas>
   <div style="display:none;">
-    <img id="source" src="assets/hero-img.jpg"
-         width="300" height="227">
+    <img id="source" src="assets/bAw-logo-logoform-hvid.png"
+         width="800" height="800">
   </div>
 
 	<video id="video" autoplay loop webkit-playsinline style="display:none">
@@ -322,8 +322,8 @@ function createProduct(position, localToWorld, productInfo)
   // Create image
   var bitmap = document.createElement('canvas');
   var context = bitmap.getContext('2d');
-  bitmap.width = 800;
-  bitmap.height = 800;
+  bitmap.width = 700;
+  bitmap.height = 700;
 
   // Create background
   var image = document.getElementById('source');
