--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ function update() {
   // Update our perspective camera's positioning
   vrControls.update();
 
-  console.log("Damn " + video.readyState + ": " + video.HAVE_ENOUGH_DATA);
+  console.log("Damn ");
 
   if(isInitialized())
   {
