--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 <script src="./VRControls.js"></script>
 <script src="./three.ar.js"></script>
 <script src="./numeric.js"></script>
+<script src="./OBJLoader.js"></script>
 <script src="./assets/product-info.js"></script>
 <script>
 
